<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="7">

    <TextView
        android:layout_weight="2"
        style="@style/AppStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:fontFamily="@font/billabong"
        android:textSize="62dp" />

    <EditText
        android:id="@+id/edit_text_username"
        style="@style/AppStyle"
        android:hint="@string/edit_text_username"
        android:background="@drawable/border"
        android:paddingLeft="12dp"/>

    <EditText
        android:id="@+id/edit_text_password"
        style="@style/AppStyle"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password"
        android:background="@drawable/border"
        android:paddingLeft="12dp"/>

    <Button
        android:id="@+id/button_login"
        style="@style/AppStyle"
        android:text="@string/button_login"
        android:background="@drawable/border"/>

    <TextView
        style="@style/AppStyle"
        android:text="@string/text_view_forgot"
        android:gravity="center"/>

    <TextView
        style="@style/AppStyle"
        android:text="@string/text_view_or"
        android:gravity="center"/>

    <TextView
        style="@style/AppStyle"
        android:text="@string/text_view_login"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_view_signup"
        style="@style/AppStyle"
        android:text="@string/text_view_signup"
        android:gravity="center"
        android:background="@drawable/border" />

</LinearLayout>