<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7">

    <TextView
        style="@style/AppStyle"
        android:layout_weight="2"
        android:fontFamily="@font/billabong"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="62dp" />

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/AppStyle"
        android:background="@drawable/border"
        android:hint="@string/edit_text_name"
        android:paddingLeft="12dp" />

    <EditText
        android:id="@+id/edit_text_email"
        style="@style/AppStyle"
        android:background="@drawable/border"
        android:hint="@string/edit_text_email"
        android:paddingLeft="12dp" />

    <EditText
        android:id="@+id/edit_text_password"
        style="@style/AppStyle"
        android:background="@drawable/border"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        android:paddingLeft="12dp" />

    <Button
        android:id="@+id/button_register"
        style="@style/AppStyle"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:text="@string/button_register" />

    <TextView
        android:id="@+id/text_view_registered"
        style="@style/AppStyle"
        android:gravity="center"
        android:text="@string/text_View_registered" />


</LinearLayout>