<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_login"
            android:title="@string/menu_login"
            android:icon="@drawable/ic_baseline_lock_24"/>

        <item
            android:id="@+id/menu_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_round_account_circle_24"/>

        <item
            android:id="@+id/menu_order_summary_list"
            android:title="@string/menu_list"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24" />

        <item
            android:id="@+id/menu_logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"/>
    </group>

</menu>