<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            app:cardCornerRadius="7dp"
            app:cardElevation="7dp"
            app:cardBackgroundColor="@color/colorCard">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_total"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_delivery_charges"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:text="@string/total"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_subtotal_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText" />


                    <TextView
                        android:id="@+id/text_view_discount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/text_view_delivery_charges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/text_view_total_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_checkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/button_checkout"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <include
        android:id="@+id/empty_layout"
        layout="@layout/cart_empty" />

</LinearLayout>